--- a/Year 10/yr10syllabus.html
+++ b/Year 10/yr10syllabus.html
@@ -19,16 +19,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%2010/yr10homepage.html" style="color:#e3f2fd;">Home</a>
+              <a class="nav-link" href="yr10homepage.html" style="color:#e3f2fd;">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%2010/yr10subjects.html" style="color:#e3f2fd;">Subjects</a>
+              <a class="nav-link" href="yr10subjects.html" style="color:#e3f2fd;">Subjects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%2010/yr10syllabus.html" style="color:#e3f2fd;">Syllabus</a>
+              <a class="nav-link" href="yr10syllabus.html" style="color:#e3f2fd;">Syllabus</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="file:///Users/manavsandhu/Documents/GitHub/sdd_task_2/Year%2010/yr10lessons.html" style="color:#e3f2fd;">Lessons</a>
+                <a class="nav-link" href="yr10lessons.html" style="color:#e3f2fd;">Lessons</a>
             </li>
           </ul>
         </div>
