--- a/Year 7/yr7lessons.html
+++ b/Year 7/yr7lessons.html
@@ -34,12 +34,56 @@
     <!-- Bootstrap -->
   
   <div id="move">  
-    <button class="eng-button">Display English</button>
+    <!-- <button class="eng-button">Display English</button>
     <button class="math-button">Display Mathematics</button>
-    <button class="sci-button">Display Science</button>
-    <p class="eng-content"><strong>English</strong></p>
-    <p class="math-content"><strong>Mathematics</strong></p>
-    <p class="sci-content"><strong>Science</strong></p>
+    <button class="sci-button">Display Science</button> -->
+    <p class="eng-content"><div id="accordion">
+      <div class="card">
+        <div class="card-header" id="headingOne">
+          <h5 class="mb-0">
+            <button class="eng-button" class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              English
+            </button>
+          </h5>
+        </div>
+    
+        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+          <div class="card-body">
+            <b>Topics</b>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-header" id="headingTwo">
+          <h5 class="mb-0">
+            <button class="math-button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Mathematics
+            </button>
+          </h5>
+        </div>
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+          <div class="card-body">
+            <b>Topics</b>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-header" id="headingThree">
+          <h5 class="mb-0">
+            <button class="sci-button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Science
+            </button>
+          </h5>
+        </div>
+        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+          <div class="card-body">
+            Topics
+          </div>
+        </div>
+      </div>
+    </div></p>
+    <!-- <p class="math-content"><strong>Mathematics</strong></p>
+    <p class="sci-content"><strong>Science</strong></p> -->
     <script src="yr7lessons.js"></script>
   </div>
 
