--- a/Year 7/yr7lessons.html
+++ b/Year 7/yr7lessons.html
@@ -41,10 +41,15 @@
                 and historical genres and involve some challenging and unpredictable plot
                  sequences and a range of non-stereotypical characters.</p>
             <b>Vocabulary</b>
-            <p></p>
+            <p style="margin-left: 20%; margin-right:20%;">Students will develop an understanding of a variety of words and 
+              descriptions in which expand their Vocabulary index or dictionary. 
+              Allowing progressive learning ability and understanding of the use 
+              of different words. This will strengthen future responses students may write</p>
           </div>
         </div>
       </div>
+
+
       <div class="card">
         <div class="card-header" id="headingTwo">
           <h5 class="mb-0">
@@ -55,10 +60,21 @@
         </div>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
           <div class="card-body">
-            <b>Topics</b>
+            <b>Number</b>
+            <p style="margin-left: 20%; margin-right:20%;"><b>Students will learn to:</b> Compare fractions using equivalence.
+              Multiply and divide fractions and decimals using efficient written 
+              strategies and digital technologies. Round decimals to a specified 
+              number of decimal places</p>
+            <b>Measurment</b>
+            <p style="margin-left: 20%; margin-right:20%;"><b>Students learn to: </b>Calculate volumes of rectangular prisms.
+               Perimeter and Circumference. Pythagoras' Theorm. Students will develop an understanding of a wide range of mathematical
+              equations. Allowing, them to solve challenging mathematical problems.
+              </p>
           </div>
         </div>
       </div>
+
+
       <div class="card">
         <div class="card-header" id="headingThree">
           <h5 class="mb-0">
